Add MinecraftRegular font and overlay template for Testpage
- Added MinecraftRegular-Bmg3.otf font file to the static fonts directory.
- Created a new overlay template (hnjnjn.json) with a sample node for editing text on the Testpage image.

--- a/gui/static/styles/root.css
+++ b/gui/static/styles/root.css
@@ -1,3 +1,32 @@
+@font-face {
+     font-family: 'Minecraft';
+     src: url('/static/fonts/MinecraftRegular-Bmg3.otf') format('opentype');
+     font-weight: 400;
+     font-style: normal;
+     font-display: swap;
+}
+@font-face {
+     font-family: 'Minecraft';
+     src: url('/static/fonts/MinecraftItalic-R8Mo.otf') format('opentype');
+     font-weight: 400;
+     font-style: italic;
+     font-display: swap;
+}
+@font-face {
+     font-family: 'Minecraft';
+     src: url('/static/fonts/MinecraftBold-nMK1.otf') format('opentype');
+     font-weight: 700;
+     font-style: normal;
+     font-display: swap;
+}
+@font-face {
+     font-family: 'Minecraft';
+     src: url('/static/fonts/MinecraftBoldItalic-1y1e.otf') format('opentype');
+     font-weight: 700;
+     font-style: italic;
+     font-display: swap;
+}
+
 /* =========================
     Theme variables
     ========================= */
